// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attaching additional props 1`] = `
.c0 {
  color: palevioletred;
  font-size: 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  margin: 1em;
  padding: 1em;
  margin2: 1em;
  padding2: 1em;
}

.c1 {
  color: palevioletred;
  font-size: 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  margin: 2em;
  padding: 2em;
  margin2: 2em;
  padding2: 2em;
}

<div>
  <input
    className="c0"
    margin="1em"
    padding="1em"
    placeholder="A small text input"
    size="1em"
    type="password"
  />
  <br />
  <input
    className="c1"
    margin="2em"
    padding="2em"
    placeholder="A bigger text input"
    size="2em"
    type="password"
  />
</div>
`;

exports[`Support &&& 1`] = `
.c0.c0.c0 {
  color: palevioletred;
}

<div
  className="c0"
/>
`;

exports[`Support &&& 2`] = `
.c0.c0.c0 {
  color: palevioletred;
  font-weight: bold;
}

<div
  className="c0"
/>
`;

exports[`Support @media queries 1`] = `
@media screen and (min-width:900px) {
  .c0 article {
    padding: 1rem;
  }
}

<div
  className="c0"
  media="foo"
/>
`;

exports[`Support the styled-components css 1`] = `
.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  direction="column"
/>
`;

exports[`Support the styled-components css 2`] = `
.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid red;
}

<div
  className="c0"
  direction="column"
/>
`;

exports[`Support the styled-components syntax 1`] = `
.c0 {
  width: 400px;
  width: 400px;
  border: 1px solid #000;
  border: 1px solid #000;
  background: palevioletred;
  color: white;
  color2: #5cb85c;
  color3: red;
}

<div
  className="c0"
  color="red"
/>
`;
